# duktape

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS.rst  AUTHORS.txt  CHANGES.txt  CMake-build-debugger.cmake  CMake-build-git.cmake  CMake-check-code-policy.cmake  CMake-generate-dist.cmake  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  Makefile  Makefile.dist  README.md  README.txt  README.txt.dist  README.txt.full  RELEASES.rst  RELEASES.txt  SConstruct  SECURITY.md  appveyor.yml  bin2img.py  combine_src.py  filter262log.py  fixemscripten.py  make_dist.sh  make_full.sh  make_maint.sh  package.json  underscore-test-shim.js  underscore_test
api-testcases/: test-all-public-symbols.c  test-base64.c  test-buffer-zeroed.c  test-bufferobject-initial.c  test-bug-is-fixed-dynamic-buffer-nullptr.c  test-bug-is-primitive-invalid-index-gh337.c  test-bug-multithread-valgrind.c  test-bug-push-buffer-maxsize.c  test-bug-push-sprintf-va-copy.c  test-bug-push-string-maxsize.c  test-bug-set-top-wrap.c  test-bug-tailcall-preventyield-assert.c  test-c-constructor.c  test-call-method.c  test-call-prop.c  test-call.c  test-charcodeat.c  test-check-require-stack-top.c  test-check-require-stack.c  test-check-type-mask.c  test-check-type.c  test-compact.c  test-compile-file.c  test-compile-string.c  test-compile-userbuffer.c  test-compile.c  test-concat.c  test-copy.c  test-decode-string.c  test-del-prop.c  test-dev-cmodule-guide.c  test-dev-internal-key-access.c  test-dev-internal-property-basics.c  test-dev-lightfunc.c  test-dev-prototype-loop.c  test-dev-valstack-checked-size-call.c  test-dev-weak-references.c  test-dump-context.c  test-dup.c  test-enum.c  (+115 more)
bugs/: issue-0027ac071806cba5e493ac6ba1bd065d9a9db1a8.yaml  issue-009457f2239d06e9288f093ea8ea5e2ee92b66d5.yaml  issue-01c1a8db9886f093863b29ca3ff68e4e60a5bb15.yaml  issue-01c7c71d5286e472ecd847519a8e07e139629f6e.yaml  issue-01ebed63292d3fdbac3262b4db696bd7195d23f5.yaml  issue-020b748f87e4128a6e0cc14542da5a984aab83a4.yaml  issue-0222e5f1bfbe4c5546fa1e18bac9ed4de11802af.yaml  issue-022c75935b8675738a6af3026766752b15c34974.yaml  issue-022e56b17f407ca5897524abb55af490ca71fbab.yaml  issue-025a205e4402f86a9f19f9f8f9ec034cffce04fa.yaml  issue-03a17823334f80e9e31dc76ed3caec543430507a.yaml  issue-03b23943c616e5c8a502e8ec403cac0d1fe5f9a4.yaml  issue-03c1df5bc2b6485c2e4b1697095ea7e0bdde4369.yaml  issue-03dc8229f45ca93fa7cace41165928b216956e51.yaml  issue-0416033a1acbff607d4a2cdd2e1acd468aded87f.yaml  issue-042a5fe6471e7e76cd793185de4613d4c5fa859d.yaml  issue-0480796ffc7b4f7a80edf43ea9053a8d2a695068.yaml  issue-04819ef07c0fec02329cfaedef2f0b9956168b20.yaml  issue-048d36afc145cb5243b0085292866e388e23b441.yaml  issue-055da218c71466682cc9ef272b85e624f905e38a.yaml  issue-0597052eae9da3d3f921c9c81a80d6ee48c7aa82.yaml  issue-059a4b1f526363717787b5a725a223341e4215fe.yaml  issue-05b7eeb4fca85bee0995f91798938b56815c760b.yaml  issue-05deac26bde60904430ef1bea537116507b30590.yaml  issue-05e8a80863d4af2baf120373c3c658e9e8959f70.yaml  issue-05f7f6b610996e79781c6fc5b9bcb567e8b4af6e.yaml  issue-06eccb5d4c1d40dbc2f45dba3a2fb598b2fb3da7.yaml  issue-07249df2c5ab7546ece1638e06ce74f8878ddbf4.yaml  issue-07d0572629ee640df1600da2684344046876e89d.yaml  issue-081659fca1225a3a11336814ba8cbee644b250e3.yaml  issue-08518fcd5599fbaa450342ba1e095c7b5a360441.yaml  issue-089433cb936be534e32748b6fe89167e27b09381.yaml  issue-089983a4c4314dd8a8d8f984237ea9bdeee8c579.yaml  issue-08d197bb54061faae7435c6b07744b0a117e7bd0.yaml  issue-08d6e88cf0c116e37aa3029948d69d8923bcfc53.yaml  issue-0979cd3ec9cdd10ff1dfedf12a72d03587ca8090.yaml  (+1176 more)
config/: README.rst  architectures.yaml  (+5 more)
dist-files/: CMakeLists.txt  Makefile.cmdline  Makefile.codepage  Makefile.coffee  Makefile.dukdebug  Makefile.eval  Makefile.eventloop  Makefile.hello  Makefile.jsoncbor  Makefile.jxpretty  Makefile.minloop  Makefile.sandbox  Makefile.sharedlibrary  Makefile.staticlibrary  Makefile.timers  README.rst  README.txt  mandel.js
examples/: CMakeLists.txt  Makefile.cmdline  Makefile.example  test.c
examples/alloc-hybrid/: duk_alloc_hybrid.c  duk_alloc_hybrid.h
examples/alloc-logging/: duk_alloc_logging.c  duk_alloc_logging.h  log2gnuplot.py  pool_config_1.json  pool_config_2.json  pool_config_3.json  pool_simulator.py
examples/alloc-torture/: duk_alloc_torture.c  duk_alloc_torture.h
examples/cmdline/: CMakeLists.txt  Makefile  README.rst  README.txt  duk_cmdline.c  duk_cmdline_ajduk.c  duk_cmdline_lowmem.c  duk_fileio.c  duk_ncurses.c  duk_socket.c
examples/codepage-conv/: duk_codepage_conv.c  duk_codepage_conv.h  test.c
examples/coffee/: README.txt  hello.coffee
examples/cpp-exceptions/: README.rst  cpp_exceptions.cpp
examples/custom-c-object/: README.rst  custom-object-main.c  custom-object-shape.c  custom-object-vector2d.c  custom-object.h  myShape.js  myVectors.js  myVectors2B.js
examples/debug-trans-dvalue/: Makefile  duk_trans_dvalue.c  duk_trans_dvalue.h  test.c
examples/debug-trans-socket/: README.rst  duk_debug_trans_socket.c  duk_debug_trans_socket.h  duk_trans_socket.c  duk_trans_socket.h  duk_trans_socket_unix.c  duk_trans_socket_windows.c
examples/eval/: CMakeLists.txt  README.txt  eval.c
examples/eventloop/: Makefile  README.rst  README.txt  basic-test.js  c_eventloop.c  c_eventloop.js  client-socket-test.js  curses-timers.js  duk_fileio.c  duk_ncurses.c  duk_socket.c  ecma_eventloop.js  eventloop.js  fileio.c  main.c  ncurses.c  poll.c  server-socket-test.js  socket.c
examples/gettingstarted/: prime.js  process.js  processlines.c
examples/guide/: CMakeLists.txt  README.txt  fib.js  prime.js  primecheck.c  processlines.c  uppercase.c
examples/hello/: CMakeLists.txt  Makefile  README.txt  hello.c  hello_ptrcomp.c
examples/jxpretty/: jxpretty.c
examples/lcd/: lcd.js
examples/minimal-eventloop/: README.rst  basic-test.js  eventloop.c  eventloop.h  main.c
examples/sandbox/: sandbox.c
examples/timers/: README.rst  eventloop.c  eventloop.h  fileio.c  main.c
examples/uart/: README.rst  SConstruct  duktape.c  duktape.h  uart.c  uart.h  uart.js  uart_bind.c
(+5551 files in other folders)
