CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(duktape LANGUAGES C)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

INCLUDE_DIRECTORIES(
    ${PROJECT_BINARY_DIR}
    src
)

SET(CMAKE_DEBUG_POSTFIX "d")

SET(OUTPUT_BINDIR ${PROJECT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_BINDIR})
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_LIBDIR})

# add the executable
AUX_SOURCE_DIRECTORY(src source_files)
ADD_LIBRARY(duktape STATIC  ${source_files})
SET_TARGET_PROPERTIES(duktape PROPERTIES FOLDER "lib-static")

ADD_SUBDIRECTORY(examples)