SET(TARGET_NAME primecheck)
ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_NAME}.c)
TARGET_LINK_LIBRARIES(${TARGET_NAME} duktape)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER "examples")

SET(TARGET_NAME processlines)
ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_NAME}.c)
TARGET_LINK_LIBRARIES(${TARGET_NAME} duktape)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER "examples")


SET(TARGET_NAME uppercase)
ADD_EXECUTABLE(${TARGET_NAME} ${TARGET_NAME}.c)
TARGET_LINK_LIBRARIES(${TARGET_NAME} duktape)
SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES FOLDER "examples")
